# PyConnectedness

./: .gitignore  README.md  pyproject.toml
examples/: Descriptives.py
examples/data/: dy2009_returns.xlsx  dy2009_vola.xlsx  dy2012_vola.xlsx
src/pyconnectedness/: __init__.py
src/pyconnectedness/connectedness/: __init__.py  decomposition.py  dynamic.py  static.py  var.py
