[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyconnectedness"
version = "0.0.1"
description = "Python library for connectedness, spillover, extreme-event, and causal risk analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Zoran Stoiljkovic" },
    { name = "Miljana Cvetkovic" },
]
keywords = [
    "connectedness", "spillover", "diebold-yilmaz", "var",
    "fevd", "econometrics", "time-series", "bayesian-networks", "max-linear", "DAGs", "systemic-risk",
    "extreme-events"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "networkx>=3.0",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
docs = [
    "sphinx",
]

[project.urls]
Homepage = "https://github.com/zstoi/PyConnectedness"
Repository = "https://github.com/zstoi/PyConnectedness"
Funding = "https://www.prototypefund.de/projects/pyconnectedness"

[tool.hatch.build.targets.wheel]
packages = ["src/pyconnectedness"]



[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=pyconnectedness --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
